<resources>
    <string name="app_name">DonAte</string>
    <string name="DescLogo">Logo de l\'app</string>
    <string name="error">Error</string>
    <string name="success">Succes!!!</string>

    <!-- String Globales-->
    <string name="user">usuari</string>
    <string name="email">usuario@email.com</string>
    <!-- Strings related to login -->
    <string name="prompt_user">Usuari:</string>
    <string name="prompt_password">Contrasenya:</string>
    <string name="log_in">Log In</string>
    <string name="OlvPass">Has oblidat la contrasenya?</string>
    <!-- Strings related to register -->
    <string name="registrarse">Registrate</string>
    <string name="promt_email">Email:</string>
    <string name="promt_movil">Telèfon mòbil:</string>
    <string name="intr_email">Introdueixi un compte de correu</string>
    <string name="intr_user">Introdueixi un nom d\'usuari</string>
    <string name="intr_telef">Introdueixi un número de telèfon</string>
    <string name="intr_contraseña">Introdueixi una contrasenya</string>
    <string name="prompt_password_again">Introdueixi de nou la contrasenya:</string>
    <string name="intr_password_again">Introdueixi de nou la contrasenya:</string>
    <string name="selec_cuenta">Tipus de compte:</string>
    <string name="cuenta_donan">Donant</string>
    <string name="cuenta_donat">Donatari</string>
    <string name="cuentaReg">Encara no tens un compte?</string>
    <string-array name="tipoCuenta">
        <item>Donant</item>
        <item>Donatari</item>
    </string-array>
    <string-array name="tipoReport">
        <item>Missatge ofensiu</item>
        <item>Assetjament</item>
        <item>Spam</item>
    </string-array>
    <!-- Strings related to Chat List-->
    <string name="chatList">Xats</string>
    <!-- Strings related to Posts-->
    <string name="TLPosts">Posts</string>
    <!-- Strings related to About Us-->
    <string name="AboutUsTitle">About Us</string>
    <string name="AboutUs">\n\n L\'objectiu principal del projecte és portar la solidaritat a un punt més pròxim en la vida quotidiana, pretenem ajudar a la gent que sofreix necessitats alimentoses amb una proposta que acosta la caritat, una solució ràpida i senzilla per a realitzar donacions.
    \n\nOfrecemos una solució davant una situació precària d\'algunes persones com és no poder adquirir una varietat d\'aliments bàsics i la dificultat que els suposa fer-ho.
    \n\nPor un altre costat volem posar remei als aliments que serien rebutjats perquè el ciutadà no vegi un aprofitament d\'aquests.</string>
    <!-- Strings related to perfil-->
    <string name="Perfil">Perfil</string>
    <string name="failurePerfil">Error: Dades no modificades</string>
    <!-- Strings related to TL Tickets-->
    <string name="report">Report</string>
    <string name="TUsuario">Usuari: (usuari)</string>
    <string name="TTitle">Títol del reporti</string>
    <string name="TDesc">Descripció del reporti</string>
    <string name="contentDescrip">Seleccine el tipus de compte que desitja</string>
    <!-- Creacion de post -->
    <string name="addImage">Afegeixi una imatge de la seva donació</string>
    <string name="inserNomPub">Insereixi un nom per a la publicació</string>
    <string name="insertDescriPost">Insereixi una decripción per al post</string>
    <string name="insertUbiHora">Insereixi una hora</string>
    <string name="insertDate">Insereixi una data</string>
    <!-- Creacion de perfil -->
    <string name="nombrePerfil">Insereixi un nou nom d\'usuari</string>
    <string name="emailPerfil">Insereixi una direcció d\'email</string>
    <string name="telefPerfil">Insereixi un telèfon</string>
    <!-- MISC -->
    <string name="dona">Donacions</string>
    <string name="prueba">prova</string>

    <!-- Compartir -->
    <string name="share">Estic interessat en la donació!</string>

    <!-- Recuperar contraseña -->
    <string name="titReContra">Introdueixi un mail per a rebre una contrasenya nova</string>
    <string name="hintReContra">Email per a recuperar</string>
    <string name="botReContra">Recuperar</string>

    <!-- Recomendaciones donaciones -->
    <string name="reDonaciones">Recomanació d\'aliments per a donar:
        \nFruites i vegetals sencers, en bon estat
        \nL\'envàs ha d\'estar íntegre i no estar deteriorat
        \nQue no depassi la data de caducitat
        \nL\'aliment ha d\'estar correctament identificat i etiquetat
        \nAliments que no haurien de ser donats:
        \nCarn i derivats no envasats
        \nMenjars preparats no envasades</string>
    <string name="successAñadidoPerfil">Dades modificades</string>
</resources>