<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/chat"
            android:icon="@drawable/chat_icon"
            android:title="@string/chatList" />
        <item
            android:id="@+id/FragmentDonaciones"
            android:icon="@drawable/post_icon"
            android:title="@string/TLPosts" />
        <item
            android:id="@+id/aboutus"
            android:icon="@drawable/aboutus_icon"
            android:title="@string/AboutUsTitle" />
        <item
            android:id="@+id/perfil"
            android:icon="@drawable/profile_icon"
            android:title="@string/Perfil" />
        <item
            android:id="@id/tltickets"
            android:icon="@drawable/ticket"
            android:title="Reports"/>
    </group>


</menu>