<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cat.copernic.donate.ui.registro.creaPost">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/contraint_box"
                android:backgroundTint="@color/azul">


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/addImage"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/addImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="150dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/ic_plus_add_image"
                    android:tint="@android:color/black"
                    app:iconSize="65dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/contraint_box"
                android:backgroundTint="@color/gris_claro"
                android:elevation="20dp">


                <EditText
                    android:id="@+id/tituloEditText"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border_text_field"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/inserNomPub"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/texto_general"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.476"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/descripcionEditText"
                    android:layout_width="0dp"
                    android:layout_height="181dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_text_field"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/insertDescriPost"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/texto_general"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.645"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tituloEditText" />

                <EditText
                    android:id="@+id/timeEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/border_text_field"
                    android:ems="10"
                    android:hint="@string/insertUbiHora"
                    android:inputType="time"
                    android:minHeight="48dp"
                    android:textSize="@dimen/texto_general"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descripcionEditText" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/distEditATextViewGrande"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@android:drawable/ic_menu_send"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/timeEditText"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:background="@drawable/buttons"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>
