<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <data>

        </data>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/contraint_box"
                    android:backgroundTint="@color/azul">


                        <TextView
                            android:id="@+id/lblrazonreport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="razon reporte"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.302"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Spinner
                            android:id="@+id/spinnerSelecCuentaRazonReport"
                            style="@style/Widget.AppCompat.Spinner.DropDown"
                            android:layout_width="266dp"
                            android:layout_height="45dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="40dp"
                            android:contentDescription="@string/contentDescrip"
                            android:minHeight="48dp"
                            android:text="@string/selec_cuenta"
                            android:textSize="@dimen/texto_general"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/lblrazonreport" />

                        <TextView
                            android:id="@+id/lbldescripreport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="Describa la razon del reporte"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.302"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/spinnerSelecCuentaRazonReport" />

                        <EditText
                            android:id="@+id/intrDescripReport"
                            android:layout_width="285dp"
                            android:layout_height="438dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="40dp"
                            android:background="@drawable/border_text_field"
                            android:ems="10"
                            android:gravity="start"
                            android:hint="@string/insertDescriPost"
                            android:textSize="@dimen/texto_general"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.327"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/lbldescripreport" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fabreport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="24dp"
                            android:layout_marginBottom="24dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:src="@android:drawable/ic_menu_send"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:ignore="SpeakableTextPresentCheck" />


                </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
</layout>